# Test_scrapper

./: .env_example  .gitignore  README.md  database.py  main.py  pyproject.toml  settings.py
models/: scraping_request_table.py
routers/: __init__.py  scrapping_request_router.py
schemas/: scraping_request.py
service/: scraping_request_service.py
static/: style.css
templates/: home.html
